# vision-transformer-experiment

./: .gitignore  BUILD.bazel  MODULE.bazel  requirements.in  requirements_lock.txt
src/python/: BUILD.bazel  main.py
