load("@rules_python//python:defs.bzl", "py_binary")
load("@pip//:requirements.bzl", "requirement")
py_binary(
    name = "main",
    srcs = ["main.py"],
    deps = [
        requirement("torch"),
        requirement("torchvision"),
        requirement("numpy"),
        requirement("scipy"),
    ],
)
